# samplesize

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  configure.in
doc/: table.txt
src/: .gitignore  2samp_1stg.c  2samp_1stg.h  2samp_2stg_type1.c  2samp_2stg_type1.h  2samp_2stg_type2.c  2samp_2stg_type2.h  2samp_2stg_type3.c  2samp_2stg_type3.h  Makefile.am  cgi.c  cgi.h  datastructures.c  datastructures.h  display_results.c  display_results.h  email_results.c  email_results.h  nstage1.c  nstage1.h  sample_cmd.c  sample_size.c  sample_size.h  xstage1.c  xstage1.h  xstage2t1c.c  xstage2t1c.h  xstage2t2c.c  xstage2t2c.h  xstage2t3c.c  xstage2t3c.h  xstage3t1c.c  xstage3t1c.h  xstage3t2c.c  xstage3t2c.h  xstage3t3c.c  xstage3t3c.h
src/fortran/: nstage1.f  two_sample_one_stage.f90  two_sample_two_stage_t1.f90  two_sample_two_stage_t2.f90  two_sample_two_stage_t3.f90  xstage1.f  xstage2t1.f  xstage2t2.f  xstage2t3.f  xstage3t1.f  xstage3t2.f  xstage3t3.f
