EXTRA_DIST = BUGS docs/ src/fortran/nstage1.f src/fortran/xstage1.f src/fortran/xstage2t1.f src/fortran/xstage2t2.f src/fortran/xstage2t3.f src/fortran/xstage3t1.f src/fortran/xstage3t2.f src/fortran/xstage3t3.f src/fortran/two_sample_one_stage.f90 src/fortran/two_sample_two_stage_t1.f90 src/fortran/two_sample_two_stage_t2.f90 src/fortran/two_sample_two_stage_t3.f90 docs/table.txt
SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4
