bin_PROGRAMS = sample_size sample_size_cmd

INCLUDES = $(PKG_CPPFLAGS)

sample_size_SOURCES = sample_size.c sample_size.h cgi.c cgi.h datastructures.c datastructures.h nstage1.c nstage1.h xstage1.c xstage1.h xstage2t1c.c xstage2t1c.h xstage2t2c.c xstage2t2c.h xstage2t3c.c xstage2t3c.h xstage3t1c.c xstage3t1c.h xstage3t2c.c xstage3t2c.h xstage3t3c.c xstage3t3c.h email_results.c email_results.h display_results.c display_results.h 2samp_1stg.c 2samp_2stg_type1.c 2samp_2stg_type2.c 2samp_2stg_type3.c 2samp_1stg.h 2samp_2stg_type1.h 2samp_2stg_type2.h  2samp_2stg_type3.h
sample_size_CFLAGS = -Wall
sample_size_LDADD = -lm

sample_size_cmd_SOURCES = nstage1.c nstage1.h xstage1.c xstage1.h xstage2t1c.c xstage2t1c.h xstage2t2c.c xstage2t2c.h xstage2t3c.c xstage2t3c.h xstage3t1c.c xstage3t1c.h xstage3t2c.c xstage3t2c.h xstage3t3c.c xstage3t3c.h sample_cmd.c sample_size.h cgi.h cgi.c email_results.c email_results.h display_results.c display_results.h 2samp_1stg.c  2samp_2stg_type1.c 2samp_2stg_type2.c 2samp_2stg_type3.c 2samp_1stg.h 2samp_2stg_type1.h 2samp_2stg_type2.h 2samp_2stg_type3.h
sample_size_cmd_CFLAGS = -Wall
sample_size_cmd_LDADD = -lm
